<resources>
    <string name="app_name">Registration</string>
    <string name="ok">OK</string>
    <string name="regonumber">RegoNumber</string>
    <string name="cardetails">Car Details</string>
    <string name="expiry_status">Expiry/Status</string>
    <string name="type">Type:</string>
    <string name="make">Make:</string>
    <string name="model">Model:</string>
    <string name="colour">Colour:</string>
    <string name="vin">VIN:</string>
    <string name="target_weight">Target Weight:</string>
    <string name="gross_mass">Gross Mass:</string>
    <string name="detail">Registration Detail</string>
    <string name="insurer">Insurer</string>
    <string name="registration">Registration</string>
    <string name="vehicle">Vehicle</string>
    <string name="plate_number">Plate Number</string>
    <string name="expired">Expired/Status</string>
    <string name="type_modal">Type</string>
    <string name="make_modal">Make</string>
    <string name="model_modal">Model</string>
    <string name="colour_modal">Colour</string>
    <string name="vin_modal">VIN</string>
    <string name="tare_weight_modal">Tare Weight</string>
    <string name="gross_mass_modal">Gross Mass</string>
    <string name="insurer_code_modal">Code</string>
    <string name="insurer_name_modal">Name</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="help_content">This App is for getting data from API.</string>
    <string name="enter_url">Please Enter URL</string>
    <string name="enter_default_url">Please Enter Default URL</string>
</resources>
